Make sure the checkmark icon is focusable, and has a visible focus state

--- a/client/components/checklist/style.scss
+++ b/client/components/checklist/style.scss
@@ -127,7 +127,8 @@
 			left: 1px;
 		}
 
-		&:hover {
+		&:hover,
+		&:focus {
 			background: $alert-green;
 			border-color: $alert-green;
 
